--- a/emotiondiary/src/App.css
+++ b/emotiondiary/src/App.css
@@ -43,7 +43,7 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 
-  font-size: 18px;
+  font-size: 13px;
   font-weight: bold;
 
   white-space: nowrap;
@@ -80,7 +80,7 @@ header > div {
 }
 header .head_text {
   width: 50%;
-  font-size: 25px;
+  font-size: 20px;
   justify-content: center;
 }
 header .head_btn_left {
@@ -170,11 +170,11 @@ header button {
 }
 .DiaryItem .diary_date {
   font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
   margin-bottom: 5px;
 }
 .DiaryItem .diary_content_preview {
-  font-size: 18px;
+  font-size: 13px;
 }
 
 .DiaryItem .btn_wrapper {
@@ -189,7 +189,7 @@ header button {
   margin-bottom: 40px;
 }
 .DiaryEditor h4 {
-  font-size: 22px;
+  font-size: 17px;
   font-weight: bold;
 }
 .DiaryEditor .input_date {
@@ -205,7 +205,7 @@ header button {
   cursor: pointer;
 
   font-family: "Poor Story";
-  font-size: 20px;
+  font-size: 15px;
 }
 .DiaryEditor .emotion_list_wrapper {
   display: grid;
@@ -215,7 +215,7 @@ header button {
 
 .DiaryEditor textarea {
   font-family: "Poor Story";
-  font-size: 20px;
+  font-size: 15px;
 
   box-sizing: border-box;
 
@@ -254,7 +254,7 @@ header button {
   margin-bottom: 10px;
 }
 .EmotionItem span {
-  font-size: 18px;
+  font-size: 13px;
 }
 .EmotionItem_off {
   background-color: #ececec;
@@ -278,4 +278,34 @@ header button {
 .EmotionItem_on_5 {
   background-color: #fd565f;
   color: white;
+}
+
+/* Diary */
+.DiaryPage {
+}
+.DiaryPage section {
+  width: 100%;
+  margin-bottom: 200px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.DiaryPage h4 {
+  font-size: 17px;
+  font-weight: bold;
+}
+.DiaryPage .diary_img_wrapper {
+  background-color: #ececec;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.DiaryPage .emotion_descript {
+  font-size: 20px;
 }
